- Added event storm detection
- Added possibility to specify multiple SNMP community strings for discovery
  and configuration polls
- NetXMS server now can understand interface aliases (description in Cisco terms)
- Added optional synchronization of node names with DNS
- New command line tool for managing alarms - nxalarm
- Implemented "stop processing" option for event processing policy rule
- Fixed issues: #188, #189, #190, #199


*
* 0.2.19
*

- Added SMS driver and subagent to send SMS via remote NetXMS agent
- Added parameters Net.RemoteShareStatus and Net.RemoteShareStatusText
  to WINNT subagent
- Added possibility to disable status, configuration, or routing table
  polls for specific host
- Added possibility to define number of consecutive status polls with same
  result needed to change status of interface or network service object
- Fixed issues: #77, #134, #151, #179, #182, #183, #184, #185, #186


*
* 0.2.18
*

- Windows console: added "subordinates" view in object browser
- WinPerf subagent:
	- Improved non-English Windows support
	- Added new parameter: System.IO.DiskTime
- New MIB added: FIBRE-CHANNEL-FE-MIB
- Fixed issues: #23, #129, #163, #164, #165, #167, #168, #170, #172, #173,
                #174, #175, #176, #177, #178


*
* 0.2.17
*

- Implemented alarm timeouts
- ODBCQUERY subagent improved
- Web interface improved
- Object browser in Windows console improved
- Fixed issues: #122, #128, #130, #136, #138, #141, #156, #157, #158,
                #159, #161, #162


*
* 0.2.16
*

- Implemented user authentification by certificates
- Management packs fully functional - templates, events, and SNMP traps
  can be exported and imported
- Cluster monitoring improved
- Node names resolution working
- Implemented OCI based driver for Oracle database
- UPS subagent: added support for Microdowell devices
- Windows console:
	- Added layer 2 topology view for compatible switches
	- Object search improved
	- Graphs improved:
		- Area graphs